--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@ img.emoji {
 
 
         <div class="g-block size-100">
-             <div id="uk-card-multi-columns-4374-particle" class="g-content g-particle">            <div class="uk-flex uk-flex-center" uk-grid style="margin: 50px 0px 0px 0px;">
+             <div id="uk-card-multi-columns-4374-particle" class="uk_card_multi_columns g-content g-particle">            <div class="uk-flex uk-flex-center" uk-grid style="margin: 50px 0px 0px 0px;">
                 
                 <div class="
                                 uk-card 
